--- a/magistratura-kyrgyzstan.html
+++ b/magistratura-kyrgyzstan.html
@@ -421,18 +421,15 @@
         </div>
     </div>
 
-    <div class="elementor-widget-wrap elementor-element-populated mt-5 wow fadeInUp" data-wow-delay="0.5s">
-        <div class="elementor-element elementor-element-f391999 elementor-widget elementor-widget-heading"
-            data-id="f391999" data-element_type="widget"
-            data-widget_type="heading.default">
-            <div class="elementor-widget-container">
-                <h2 class="elementor-heading-title elementor-size-default">Финансовая поддержка/стипендия</h2>
-            </div>
+    <div class="container">
+        <div class="elementor-widget-container">
+            <h2 class="elementor-heading-title elementor-size-default d-flex justify-content-center">Финансовая
+                поддержка/стипендия</h2>
         </div>
         <div class="elementor-element elementor-element-1e913f1 elementor-widget elementor-widget-text-editor"
             data-id="1e913f1" data-element_type="widget" data-widget_type="text-editor.default">
             <div class="elementor-widget-container">
-                <p><strong>ФХЗ и АГУПКР оплачивают:</strong></p>
+                <h2 class="elementor-heading-title elementor-size-default">ФХЗ и АГУПКР оплачивают:</h2>
                 <ol>
                     <li>Полную стоимость обучения Магистратуры</li>
                     <li>Ежемесячную стипендию (только для магистрантов по направлению «Местное государственное
@@ -441,30 +438,20 @@
                         управление и местное самоуправление»)</li>
                 </ol>
             </div>
-        </div>
-    </div>
 
-    <div class="aux-parallax-section elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-14bdef4 mt-5"
-        data-id="14bdef4" data-element_type="column">
-        <div class="elementor-widget-wrap elementor-element-populated">
-            <div class="elementor-element elementor-element-84cfcab elementor-widget elementor-widget-heading"
-                data-id="84cfcab" data-element_type="widget" data-widget_type="heading.default">
-                <div class="elementor-widget-container wow fadeInUp" data-wow-delay="0.5s">
-                    <h2 class="elementor-heading-title elementor-size-default">Магистратура 2023</h2>
+            <div class="mt-5" data-id="14bdef4" data-element_type="column">
+                <div class="elementor-widget-wrap elementor-element-populated">
+                    <div class="elementor-element elementor-element-84cfcab elementor-widget elementor-widget-heading"
+                        data-id="84cfcab" data-element_type="widget" data-widget_type="heading.default">
+                        <div class="elementor-widget-container wow fadeInUp" data-wow-delay="0.7s">
+                            <h2 class="elementor-heading-title elementor-size-default">Магистратура 2023</h2>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <div class="aux-parallax-section elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-22c8063 wow fadeInUp"
-        data-wow-delay="0.5s" data-id="22c8063" data-element_type="column">
-        <div class="elementor-widget-wrap elementor-element-populated">
-            <div class="elementor-element elementor-element-ea63bf3 elementor-widget elementor-widget-heading animated fadeInDown"
-                data-id="ea63bf3" data-element_type="widget"
-                data-settings="{&quot;_animation&quot;:&quot;fadeInDown&quot;}" data-widget_type="heading.default">
-                <div class="elementor-widget-container">
-                    <h2 class="elementor-heading-title elementor-size-default">Требования к кандидатам:</h2>
-                </div>
+            <div class="elementor-widget-container">
+                <h2 class="elementor-heading-title elementor-size-default">Требования к кандидатам:</h2>
             </div>
             <div class="elementor-element elementor-element-6a38b6f elementor-widget elementor-widget-text-editor"
                 data-element_type="widget" data-widget_type="text-editor.default">
@@ -473,26 +460,24 @@
                         <li>Стаж работы на государственной и муниципальной службе от 2 лет;</li>
                         <li>Высшее образование;</li>
                         <li>Возраст до 43 лет;</li>
-                        <li>На момент подачи заявления должен состоять на государственной или муниципальной службе в
+                        <li>На момент подачи заявления должен состоять на государственной или муниципальной
+                            службе в
                             одном из следующих государственных органов или органов МСУ:</li>
+                        <ul>
+                            <li style="list-style-type: none;">
+                                <ul>
+                                    <li>Министерства, государственные агентства или другие государственные
+                                        учреждения;
+                                    </li>
+                                    <li>Аппарат полномочного представителя Правительства в области;</li>
+                                    <li>Районная государственная администрация;</li>
+                                    <li>Территориальное подразделение министерства или ведомства;</li>
+                                    <li>Мэрия или аппарат городского кенеша;</li>
+                                    <li>Айыл окмоту.</li>
+                                </ul>
+                            </li>
+                        </ul>
                     </ol>
-                </div>
-            </div>
-            <div class="elementor-element elementor-element-ed915a4 elementor-widget elementor-widget-text-editor"
-                data-element_type="widget" data-widget_type="text-editor.default">
-                <div class="elementor-widget-container">
-                    <ul>
-                        <li style="list-style-type: none;">
-                            <ul>
-                                <li>Министерства, государственные агентства или другие государственные учреждения;</li>
-                                <li>Аппарат полномочного представителя Правительства в области;</li>
-                                <li>Районная государственная администрация;</li>
-                                <li>Территориальное подразделение министерства или ведомства;</li>
-                                <li>Мэрия или аппарат городского кенеша;</li>
-                                <li>Айыл окмоту.</li>
-                            </ul>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -510,7 +495,8 @@
             <div class="elementor-element elementor-element-4cb5c4f elementor-widget elementor-widget-text-editor"
                 data-id="4cb5c4f" data-element_type="widget" data-widget_type="text-editor.default">
                 <div class="elementor-widget-container wow fadeInUp" data-wow-delay="0.7s">
-                    <p><span style="color: #000000;">Заинтересованные <strong>кандидаты могут направить запрос в течение
+                    <p><span style="color: #000000;">Заинтересованные <strong>кандидаты могут направить запрос в
+                                течение
                                 года на электронный адрес </strong></span><a
                             href="mailto:omurkanova-b@hss.de">omurkanova-b@hss.de</a></p>
                     <p>С началом приемной кампании АГУПКР, кандидату будет выслано уведомление об условиях участия в
@@ -549,7 +535,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Контакты</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> 237 ул. Панфилова Бишкек, Кыргызстан</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> 237 ул. Панфилова Бишкек, Кыргызстан
+                    </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0 312 662 486</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i> kirgisistan@hss.de</p>
                     <div class="d-flex pt-2">
