--- a/magistratura-tadgikistan.html
+++ b/magistratura-tadgikistan.html
@@ -346,66 +346,60 @@
         </div>
     </div>
 
-    <div class="elementor-widget-wrap elementor-element-populated mt-5 wow fadeInUp" data-wow-delay="0.5s">
-        <div class="elementor-element elementor-element-f391999 elementor-widget elementor-widget-heading"
-            data-id="f391999" data-element_type="widget" data-widget_type="heading.default">
-            <div class="elementor-widget-container">
-                <h2 class="elementor-heading-title elementor-size-default">Финансовая поддержка/стипендия</h2>
-            </div>
+    <div class="container">
+        <div class="elementor-widget-container">
+            <h2 class="elementor-heading-title elementor-size-default d-flex justify-content-center">Финансовая
+                поддержка/стипендия</h2>
         </div>
         <div class="elementor-element elementor-element-1e913f1 elementor-widget elementor-widget-text-editor"
             data-id="1e913f1" data-element_type="widget" data-widget_type="text-editor.default">
             <div class="elementor-widget-container">
-                <p><strong>ФХЗ и Академия оплачивают:</strong></p>
+                <h2 class="elementor-heading-title elementor-size-default">ФХЗ и Академия оплачивают:</h2>
                 <ol>
                     <li>Полную стоимость обучения магистратуры</li>
-                    <li>Ежемесячную стипендию для магистрантов дневной очной программы «Государственное управление»</li>
+                    <li>Ежемесячную стипендию для магистрантов дневной очной программы «Государственное управление»
+                    </li>
                     <li>Пребывание в общежитии</li>
                 </ol>
             </div>
         </div>
-    </div>
 
-    <div class="aux-parallax-section elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-22c8063 mt-5 wow fadeInUp"
-        data-wow-delay="0.5s" data-element_type="column">
-        <div class="elementor-widget-wrap elementor-element-populated">
-            <div class="elementor-element elementor-element-ea63bf3 elementor-widget elementor-widget-heading animated fadeInDown"
-                data-id="ea63bf3" data-element_type="widget">
-                <div class="elementor-widget-container mt-5">
-                    <h2 class="elementor-heading-title elementor-size-default">Требования к кандидатам:</h2>
-                </div>
-            </div>
-            <div class="elementor-element elementor-element-6a38b6f elementor-widget elementor-widget-text-editor"
-                data-element_type="widget" data-widget_type="text-editor.default">
-                <div class="elementor-widget-container">
-                    <ol>
-                        <li>Опыт работы на государственной службе от 2-х лет;</li>
-                        <li>Высшее образование;</li>
-                        <li>Возраст до 35 лет;</li>
-                        <li>На момент подачи заявления кандидат должен находиться на государственной службе в одном из государственных органов</li>
-                    </ol>
-                </div>
+
+        <div class="elementor-widget-container mt-5">
+            <h2 class="elementor-heading-title elementor-size-default">Требования к кандидатам:</h2>
+        </div>
+        <div class="elementor-element elementor-element-6a38b6f elementor-widget elementor-widget-text-editor"
+            data-element_type="widget" data-widget_type="text-editor.default">
+            <div class="elementor-widget-container">
+                <ol>
+                    <li>Опыт работы на государственной службе от 2-х лет;</li>
+                    <li>Высшее образование;</li>
+                    <li>Возраст до 35 лет;</li>
+                    <li>На момент подачи заявления кандидат должен находиться на государственной службе в одном
+                        из государственных органов</li>
+                </ol>
             </div>
         </div>
-    </div>
 
-    <div class="mt-5" data-id="cd8435b" data-element_type="column">
-        <div class="elementor-widget-wrap elementor-element-populated">
-            <div class="elementor-element elementor-element-1b42db0 elementor-widget elementor-widget-heading"
-                data-id="1b42db0" data-element_type="widget" data-widget_type="heading.default">
-                <div class="elementor-widget-container mt-5 wow fadeInUp" data-wow-delay="0.6s">
-                    <h2 class="elementor-heading-title elementor-size-large" style="color: #0097d2;">Предварительная
-                        регистрация</h2>
+        <div class="mt-5" data-id="cd8435b" data-element_type="column">
+            <div class="elementor-widget-wrap elementor-element-populated">
+                <div class="elementor-element elementor-element-1b42db0 elementor-widget elementor-widget-heading"
+                    data-id="1b42db0" data-element_type="widget" data-widget_type="heading.default">
+                    <div class="elementor-widget-container mt-5 wow fadeInUp" data-wow-delay="0.6s">
+                        <h2 class="elementor-heading-title elementor-size-large" style="color: #0097d2;">Предварительная
+                            регистрация</h2>
+                    </div>
                 </div>
-            </div>
-            <div class="elementor-element elementor-element-4cb5c4f elementor-widget elementor-widget-text-editor"
-                data-id="4cb5c4f" data-element_type="widget" data-widget_type="text-editor.default">
-                <div class="elementor-widget-container wow fadeInUp" data-wow-delay="0.7s">
-                    <p><span style="color: #000000;">Заинтересованные <strong>кандидаты могут направить запрос в течение
-                                года на электронный адрес </strong></span><a
-                            href="mailto:Tadschikistan@hss.de">mailto:Tadschikistan@hss.de</a></p>
-                    <p>С началом приемной кампании АГУПКР, кандидату будет выслано уведомление об условиях участия в
-                        стипендиальной программе.</p>
+                <div class="elementor-element elementor-element-4cb5c4f elementor-widget elementor-widget-text-editor"
+                    data-id="4cb5c4f" data-element_type="widget" data-widget_type="text-editor.default">
+                    <div class="elementor-widget-container wow fadeInUp" data-wow-delay="0.7s">
+                        <p><span style="color: #000000;">Заинтересованные <strong>кандидаты могут направить запрос в
+                                    течение
+                                    года на электронный адрес </strong></span><a
+                                href="mailto:Tadschikistan@hss.de">mailto:Tadschikistan@hss.de</a></p>
+                        <p>С началом приемной кампании АГУПКР, кандидату будет выслано уведомление об условиях участия в
+                            стипендиальной программе.</p>
+                    </div>
                 </div>
             </div>
         </div>
