validation q/a изменил текст

--- a/QA.html
+++ b/QA.html
@@ -309,7 +309,7 @@
                                         placeholder="Gurdian Name" />
                                     <label for="gname" class="form-label">Введите ваше имя</label>
                                     <div class="invalid-feedback" id="gnameError">
-                                        Пожалуйста, введите корректный name.
+                                        Пожалуйста, введите корректное имя.
                                     </div>
                                 </div>
                             </div>
@@ -343,7 +343,7 @@
                                         id="message" style="height: 100px"></textarea>
                                     <label for="message">Введите ваш вопрос</label>
                                     <div class="invalid-feedback" id="messageError">
-                                        Пожалуйста, введите корректный message.
+                                        Пожалуйста, введите ваш вопрос.
                                     </div>
                                 </div>
                             </div>
