adaptivka index/project

--- a/index.html
+++ b/index.html
@@ -127,6 +127,39 @@
             .col-lg-8 .text-white {
                 font-size: 60px;
             }
+
+            .carousel-control-prev,
+            .carousel-control-next {
+                display: none;
+            }
+        }
+
+        @media (max-width: 768px) {
+
+            .carousel-inner .row {
+                display: flex;
+                flex-wrap: nowrap;
+                overflow-x: auto;
+            }
+
+            .carousel-inner .col-12 {
+                flex: 0 0 auto;
+                max-width: 100%;
+                margin-bottom: 80px;
+            }
+
+            .carousel-inner .carousel-item {
+                width: 100%;
+            }
+
+            .carousel-control-prev,
+            .carousel-control-next {
+                display: none;
+            }
+
+            .carousel-indicators {
+                display: none;
+            }
         }
     </style>
 
@@ -251,7 +284,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 style='font-size: 4.5vw;' class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда
+                                    <h1 style='font-size: 4.5vw;'
+                                        class="display-1 text-white mb-5 animated slideInDown">Учебная платформа Фонда
                                         Ханнса Зайделя в Центральной Азии</h1>
                                     <a href="baza-znanii.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a>
                                 </div>
@@ -265,7 +299,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
-                                    <h1 style='font-size: 4.5vw;' class="display-1 text-white mb-5 animated slideInDown">На службе демократии,
+                                    <h1 style='font-size: 4.5vw;'
+                                        class="display-1 text-white mb-5 animated slideInDown">На службе демократии,
                                         мира и развития</h1>
                                     <!-- <a href="about.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a> -->
                                 </div>
@@ -279,7 +314,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
-                                    <h1 style='font-size: 4.5vw;' class="display-1 text-white mb-5 animated slideInDown">Повышение
+                                    <h1 style='font-size: 4.5vw;'
+                                        class="display-1 text-white mb-5 animated slideInDown">Повышение
                                         профессионализма для ключевых лиц ОМСУ</h1>
                                     <!-- <a href="project.html" class="btn btn-primary py-sm-3 px-sm-4">Подробнее</a> -->
                                 </div>
@@ -499,7 +535,7 @@
                     <div class="container-xxl py-5">
                         <div class="container">
                             <div class="row g-5">
-                                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                                <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
                                             <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
@@ -512,7 +548,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                                <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
                                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
@@ -525,7 +561,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                                <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
                                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
@@ -548,7 +584,7 @@
                     <div class="container-xxl py-5">
                         <div class="container">
                             <div class="row g-5">
-                                <div class="col-lg-6 col-md-6">
+                                <div class="col-lg-6 col-md-6 col-12">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
                                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
@@ -563,7 +599,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6">
+                                <div class="col-lg-6 col-md-6 col-12">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
                                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
